// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useStyles attaches new styles when a new style collector is supplied 1`] = `
<head>
  <style
    data-trousers=".foo__26524557390 .foo--23561639410"
    type="text/css"
  >
    .foo__26524557390{background-color:blue;}

    .foo--23561639410{background-color:red;}

  </style>
</head>
`;

exports[`useStyles attaches new styles when a new style collector is supplied 2`] = `
<head>
  <style
    data-trousers=".foo__26524557390 .foo--23561639410 .foo__4827752910 .foo--23495128240"
    type="text/css"
  >
    .foo__26524557390{background-color:blue;}

    .foo--23561639410{background-color:red;}

    .foo__4827752910{background-color:purple;}

    .foo--23495128240{background-color:green;}

  </style>
</head>
`;

exports[`useStyles attaches single style to the head 1`] = `
<head>
  <style
    data-trousers=".css__40657472120"
    type="text/css"
  >
    .css__40657472120{background-color:blue;}

  </style>
</head>
`;

exports[`useStyles attaches styles to the head 1`] = `
<head>
  <style
    data-trousers=".foo__26524557390"
    type="text/css"
  >
    .foo__26524557390{background-color:blue;}

  </style>
</head>
`;

exports[`useStyles attaches styles with modifiers to the head 1`] = `
<head>
  <style
    data-trousers=".foo__26524557390"
    type="text/css"
  >
    .foo__26524557390{background-color:blue;}

  </style>
</head>
`;

exports[`useStyles attaches styles with modifiers to the head 2`] = `
<head>
  <style
    data-trousers=".foo__26524557390 .foo--23561639410"
    type="text/css"
  >
    .foo__26524557390{background-color:blue;}

    .foo--23561639410{background-color:red;}

  </style>
</head>
`;

exports[`useStyles attaches themed single style to the head 1`] = `
<head>
  <style
    data-trousers=".css__14182296162789151078"
    type="text/css"
  >
    .css__14182296162789151078{background-color:Atomic Tangerine;}

  </style>
</head>
`;

exports[`useStyles attaches themed styles to the head 1`] = `
<head>
  <style
    data-trousers=".foo__26749786011547705526"
    type="text/css"
  >
    .foo__26749786011547705526{background-color:purple;}

  </style>
</head>
`;

exports[`useStyles attaches themed styles to the head 2`] = `
<head>
  <style
    data-trousers=".foo__26749786011547705526 .foo--26749786011547705526"
    type="text/css"
  >
    .foo__26749786011547705526{background-color:purple;}

    .foo--26749786011547705526{background-color:purple;}

  </style>
</head>
`;
